[project]
name = "delve_common"
version = "0.0.1"
authors = [
  {name = "Alex Lohnes", email = "alexanderjlohnes@gmail.com"},
]
readme = "readme.md"

[project.dependencies]
dependencies = [
  "starlette",
  "fastapi",
  "pydantic",
  "motor"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"